--- a/index.html
+++ b/index.html
@@ -468,10 +468,11 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h2 class="text-white fw-bolder text-center">কোর্স সম্পর্কিত সাধারণ জিজ্ঞাসা</h2>
-            <div class="row accordion mt-2 py-5 container-fluid d-flex align-items-center justify-content-around">
+        <section class="mt-2 py-5 ">
 
+            <div
+                class="row accordion mx-auto mt-2 py-5 container-fluid d-flex align-items-center justify-content-around">
+                <h2 class="text-dark fw-bolder text-center">কোর্স সম্পর্কিত সাধারণ জিজ্ঞাসা</h2>
                 <div class="col-md-7 mt-5 pt-3 px-lg-5 col-sm-12 ">
                     <div class=" accordion  accordion-flush" id="accordionFlushExample1">
                         <div class="accordion-item accordion my-3 ">
